--- a/UserInfo.html
+++ b/UserInfo.html
@@ -368,13 +368,13 @@
 				<div style="float:right;" data-reactid=".0.3.1.1">
 					<div data-reactid=".0.3.1.1.0">
 						<div data-reactid=".0.3.1.1.0.0">
-							<span style="display: inline-block; line-height: 18px; padding: 0px 6px; border: 1px solid rgb(232, 232, 232); margin-right: 10px; color: rgb(232, 232, 232);" class="tp-common-btn    " data-page="0" data-disable="true" data-reactid=".0.3.1.1.0.0.0" onclick="pre()">
-								<span style="display:inline-block;width:0;height:0;border-top-style:solid;border-top-color:transparent;border-top-width:4px;border-right-style:solid;border-right-color:#6C6C6C;border-right-width:4px;border-bottom-style:solid;border-bottom-color:transparent;border-bottom-width:4px;" data-reactid=".0.3.1.1.0.0.0.0">
+							<span class="tp-common-btn spanPage" data-page="0" data-disable="true" data-reactid=".0.3.1.1.0.0.0" id="pre">
+								<span class="prearrow" data-reactid=".0.3.1.1.0.0.0.0">
 								</span>
 							</span>
-							<span style="display:inline-block;line-height:18px;padding:0  6px;border-width:1px;border-style:solid;border-color:#E8E8E8;:hover:[object Object];" class="tp-common-btn    " data-page="2" data-disable="false" data-reactid=".0.3.1.1.0.0.1">
-							<span data-reactid=".0.3.1.1.0.0.1.0" onclick="next()">下一页</span>
-							<span style="display:inline-block;width:0;height:0;border-top-style:solid;border-top-color:transparent;border-top-width:4px;border-left-style:solid;border-left-color:#ff6000;border-left-width:4px;border-bottom-style:solid;border-bottom-color:transparent;border-bottom-width:4px;margin-left:8px;" data-reactid=".0.3.1.1.0.0.1.1">
+							<span onclick="next()" id="next" style="display:inline-block;line-height:18px;padding:0  6px;border-width:1px;border-style:solid;border-color:#E8E8E8;:hover:[object Object];" class="tp-common-btn    " data-page="2" data-disable="true" data-reactid=".0.3.1.1.0.0.1">
+							<span data-reactid=".0.3.1.1.0.0.1.0" id="nextpage">下一页</span>
+							<span class="nextarrow" data-reactid=".0.3.1.1.0.0.1.1">
 							</span></span></div></div></div></div>
 			<div class="row">
 				
