--- a/FAQ.html
+++ b/FAQ.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Contact</title>
+<title>FAQ & 联系我们</title>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -25,6 +25,28 @@
 	
 </script>
 <!-- cart -->
+<!-- 图标 -->
+<link rel="SHUTAO" href="images/st1.ico"/>
+<style type="text/css">
+.question {
+    background-color: RGB(255,255,255);
+    border: 2px solid RGB(236,99,0);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	height:100px;
+	width:700px;
+	padding:20px;
+	
+}
+.contact-infom p{
+	color: #333;
+    font-size: 1em;
+    margin: 1em 0 0;
+    line-height: 1.8em;
+}
+</style>
 </head>
 <body>
 	<!--header-->
@@ -152,33 +174,25 @@
 	<!--contact-->
 	<div class="contact">
 		<div class="container">
-			<h2>Contact Us</h2>
-			<div class="map">
-				<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d205251.8961757029!2d-82.55659211602483!3d36.50439253757311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x885a856b70074b97%3A0x6f9cc0d30bcc841f!2sKingsport%2C+TN%2C+USA!5e0!3m2!1sen!2sin!4v1433743549812"></iframe>
+			
+			<h2>FAQ</h2>
+			<div id="contact-infom" style="margin-bottom:20px;margin-top:20px;align:center;">
+				<h4 >111 </h4>
+				<p class=question>23333</p>
 			</div>
-			<div class="contact-infom">
-				<h4>Miscellaneous information :</h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing
-					elit,sheets containing Lorem Ipsum passages, sed do eiusmod tempor
-					incididunt ut labore et dolore magna aliqua.It was popularised in
-					the 1960s with the release of Letraset and more recently with
-					desktop publishing software like Aldus PageMaker including versions
-					of Lorem Ipsum.</p>
-			</div>
+			<h2>联系我们</h2>
 			<div class="address">
 				<div class="col-md-4 address-grids">
-					<h4>Address :</h4>
+					<h4>地址 :</h4>
 					<ul>
 						<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
 						<p>
-							Eiusmod Tempor inc<br> St Dolore Place,<br> Kingsport
-							56777
+							东南大学<br> 邮编：211100
 						</p>
 					</ul>
 				</div>
 				<div class="col-md-4 address-grids">
-					<h4>Contact no :</h4>
+					<h4>联系电话 :</h4>
 					<p>
 						<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>+2
 						800 544 6035
@@ -189,28 +203,28 @@
 					</p>
 				</div>
 				<div class="col-md-4 address-grids">
-					<h4>Email :</h4>
+					<h4>电子邮箱 :</h4>
 					<p>
 						<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a
-							href="mailto:example@mail.com">mail@example.com</a>
+							href="mailto:example@mail.com">525224161@qq.com</a>
 					</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
 			<div class="contact-form">
-				<h4>Contact form</h4>
+				<h4>联系表单</h4>
+				<p id="message" style="color:red"></p>
 				<form>
-					<input type="text" value="Name" onfocus="this.value = '';"
-						onblur="if (this.value == '') {this.value = 'Name';}" required="">
-					<input type="text" value="Email" onfocus="this.value = '';"
-						onblur="if (this.value == '') {this.value = 'Email';}" required="">
-					<input type="text" value="Telephone" onfocus="this.value = '';"
-						onblur="if (this.value == '') {this.value = 'Telephone';}"
-						required="">
+					<input type="text" value="姓名" onfocus="this.value = '';"
+						onblur="if (this.value == '') {this.value = '姓名';}"  id="name">
+					<input type="text" value="电子邮箱" onfocus="this.value = '';"
+						onblur="if (this.value == '') {this.value = 'Email';}" id="CEmail">
+					<input type="text" value="联系电话" onfocus="this.value = '';"
+						onblur="if (this.value == '') {this.value = 'Telephone';}" id="phone">
 					<textarea type="text" onfocus="this.value = '';"
 						onblur="if (this.value == '') {this.value = 'Message...';}"
-						required="">Message...</textarea>
-					<button class="btn1">Submit</button>
+						id="info">请写明问题</textarea>
+					<input type="button" class="btn1" onClick="Connect()" value="提交"/>
 				</form>
 			</div>
 		</div>
@@ -242,4 +256,5 @@
 </body>
 <script type="text/javascript" src="js/Login.js"></script>
 <script type="text/javascript" src="js/Logout.js"></script>
+<script type="text/javascript" src="js/Connect.js"></script>
 </html>
