--- a/single.html
+++ b/single.html
@@ -165,19 +165,7 @@
 						<ul class="slides">
 							<li data-thumb="images/s1.png">
 								<div class="thumb-image">
-									<img src="images/s1.png" data-imagezoom="true"
-										class="img-responsive">
-								</div>
-							</li>
-							<li data-thumb="images/s2.png">
-								<div class="thumb-image">
-									<img src="images/s2.png" data-imagezoom="true"
-										class="img-responsive">
-								</div>
-							</li>
-							<li data-thumb="images/s3.png">
-								<div class="thumb-image">
-									<img src="images/s3.png" data-imagezoom="true"
+									<img id="book_image"src="images/s1.png" data-imagezoom="true"
 										class="img-responsive">
 								</div>
 							</li>
@@ -253,6 +241,8 @@
 		</div>
 	</div>
 </body>
-<script type="text/javascript" src="js/books.js"></script>
 <script type="text/javascript" src="js/single.js"></script>
+<script type="text/javascript" src="js/Login.js"></script>
+<script type="text/javascript" src="js/Logout.js"></script>
+
 </html>
