--- a/support.html
+++ b/support.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Home</title>
+<title>帮助</title>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -25,6 +25,11 @@
 	
 </script>
 <!-- cart -->
+<style type="text/css">
+
+
+</style>
+
 </head>
 <body>
 	<!--header-->
@@ -152,7 +157,49 @@
 	<!--banner-->
 	<div class="banner">
 
-		<div class="container"></div>
+		<div class="container">
+			<h2 style="margin:1em">帮助</h2>
+			<div>
+				<p style="font-size: 1.5em;margin-bottom:20px;">1. 注册登录</p>
+				<div>欢迎来到书淘~<br/>
+					▶  已有账号的用户可通过页面右上角的弹框进行登录；<br/>
+					▶  若还没有账号，您也可通过右上角的弹框点击“Sign up”进入注册界面注册账号；<br/>
+					▶  登陆后可点击“。。。。。”退出登录。
+				</div>
+			</div>
+			<div>
+				<p style="font-size: 1.5em;margin-bottom:20px;">2. 如何修改个人信息</p>
+				<div>▶  登陆后您可通过进入个人主页来修改个人信息：<br/>
+					▶  可对………………进行修改。
+				</div>
+			</div>
+			<div>
+				<p style="font-size: 1.5em;margin-bottom:20px;">3. 关于搜书</p>
+				<div>▶  您可在本网站首页中的搜索框中输入要搜的内容；<br/>
+					 您可对搜索类型进行选择：通过 作者、书名、出版社进行搜索；<br/>
+					写好后点击搜索即可看到您要的搜索结果；<br/>
+					▶  您也可以在导航栏的分类中找到书籍的分类，可查看本分类的所有书籍；<br/>
+					▶ 在搜索结果中，也可通过左方导航栏进行分类选择。
+				</div>
+			</div>
+			<div>
+				<p style="font-size: 1.5em;margin-bottom:20px;">3. 关于购书</p>
+				<div>▶  只有已登录用户可购买书籍；<br/>
+					▶  搜索到您的书籍后可点击“查看”浏览书籍详细信息，在本页面可选择购买数量，然后点击“购买”直接购买，或者 “添加到购物车”将概述添加到购物车后在购物车界面进行结账。
+				</div>
+			</div>
+			<div>
+				<p style="font-size: 1.5em;margin-bottom:20px;">4. 结账</p>
+				<div>▶  当您点击“直接购买”或者在购物车中点击“结账”后，进入结账界面，填入收货信息，然后提交订单，结账。
+				</div>
+			</div>
+			<div>
+				<p style="font-size: 1.5em;margin-bottom:20px;">5. 账单记录</p>
+				<div>▶  已登录用户可在个人主页中查看个人的历史账单信息。
+				</div>
+			</div>
+			
+		</div>
 	</div>
 	<!--//banner-->
 	<!--footer-->
