--- a/books.html
+++ b/books.html
@@ -205,7 +205,7 @@ function hideURLbar() {
 							<h4 id="bookName0">Product #1</h4>
 							<span id="price0" class="item_price" id="bookPrice1">$2000.00</span> 
 							<p class="item_quantity" id="counter0"></p>
-							<input type="button" class="item_add items" value="添加到购物车">
+							<input type="button" class="item_add items" value="添加到购物车" onclick="addcartBooks(this)">
 							<div class="clearfix"></div>
 						</div>
 					</div>
@@ -1002,5 +1002,6 @@ function hideURLbar() {
 <script type="text/javascript" src="js/Login.js"></script>
 <script type="text/javascript" src="js/Logout.js"></script>
 <script type="text/javascript" src="js/books.js"></script>
+<script type="text/javascript" src="js/addcart.js"></script>
 
 </html>
