--- a/checkout.html
+++ b/checkout.html
@@ -152,7 +152,7 @@
 	<!--cart-items-->
 	<div class="cart-items">
 		<div class="container">
-			<h2>My Shopping Cart(3)</h2>
+			<h2>My Shopping Cart</h2>
 			<script>
 				$(document).ready(function(c) {
 					$('.close1').on('click', function(c) {
