--- a/single.html
+++ b/single.html
@@ -120,38 +120,50 @@
 				<!--//navbar-header-->
 			</nav>
             <div class="header-info">
-                <div class="header-right login">
-                    <a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
-                    <div id="loginBox" style="right:16%;">
-                        <form id="loginForm">
-                            <fieldset id="body">
-                                <fieldset>
-                                    <label for="email">Email Address</label>
-                                    <input type="text" name="email" id="email">
-                                        </fieldset>
-                                <fieldset>
-                                    <label for="password">Password</label>
-                                    <input type="password" name="password" id="password">
-                                        </fieldset>
-                                <input type="submit" id="login" value="Sign in">
-                                    <label for="checkbox"><input type="checkbox" id="checkbox"> <i>Remember me</i></label>
-                                    </fieldset>
-                            <p>New User ? <a class="sign" href="account.html">Sign Up</a> <span><a href="#">Forgot your password?</a></span></p>
-                        </form>
-                    </div>
-                </div>
-                <div class="header-right cart">
-                    <a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-                    <div class="cart-box" style="right:10.5%;">
-                        <h4><a href="checkout.html">
-                            <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>) 
-                        </a></h4>
-                        <p><a href="javascript:;" class="simpleCart_empty">Empty cart</a></p>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
-                <div class="clearfix"></div>
-            </div>
+				<div class="header-right login">
+					<a href="#" id="user" style="right: 150px; position: absolute;"><span
+						class="glyphicon glyphicon-user" aria-hidden="true"></span></a>
+					<div id="loginBox" style="right: 130px; top: 54px;">
+						<form id="loginForm">
+							<fieldset id="body">
+								<fieldset>
+									<label for="email">Email Address</label> <input type="text"
+										name="email" id="email">
+								</fieldset>
+								<fieldset>
+									<label for="password">Password</label> <input type="password"
+										name="password" id="password">
+								</fieldset>
+								<input type="button" id="login" value="Sign in"
+									onClick="Login()"> <label for="checkbox"><input
+									type="checkbox" id="checkbox"> <i>Remember me</i><a
+									id=msg></a></label>
+							</fieldset>
+							<p>
+								New User ? <a class="sign" href="account.html">Sign Up</a> <span><a
+									href="#">Forgot your password?</a></span>
+							</p>
+						</form>
+					</div>
+				</div>
+				<div class="header-right cart">
+					<a href="#" style="right: 100px; position: absolute;"><span
+						class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+					<div class="cart-box" style="right: 75px; top: 54px;">
+						<h4>
+							<a href="checkout.html"> <span class="simpleCart_total">
+									$0.00 </span> (<span id="simpleCart_quantity"
+								class="simpleCart_quantity"> 0 </span>)
+							</a>
+						</h4>
+						<p>
+							<a href="javascript:;" class="simpleCart_empty">Empty cart</a>
+						</p>
+						<div class="clearfix"></div>
+					</div>
+				</div>
+				<div class="clearfix"></div>
+			</div>
 			<div class="clearfix"></div>
 		</div>
 	</div>
