--- a/books.html
+++ b/books.html
@@ -906,10 +906,12 @@ function hideURLbar() {
 						<div data-reactid=".0.3.1.1.0.0">
 							<span class="tp-common-btn spanPage" data-page="0" data-disable="true" data-reactid=".0.3.1.1.0.0.0" id="pre">
 								<span class="prearrow" data-reactid=".0.3.1.1.0.0.0.0">
+								
 								</span>
+								<a href="#top" style="color: rgb(255,255,255);">""</a>
 							</span>
 							<span onclick="Next()" id="next" style="display:inline-block;line-height:18px;padding:0  6px;border-width:1px;border-style:solid;border-color:#E8E8E8;:hover:[object Object];" class="tp-common-btn    " data-page="2" data-disable="true" data-reactid=".0.3.1.1.0.0.1">
-							<span data-reactid=".0.3.1.1.0.0.1.0" id="nextpage">下一页</span>
+							<span data-reactid=".0.3.1.1.0.0.1.0" id="nextpage"><a href="#top">下一页</a></span>
 							<span class="nextarrow" data-reactid=".0.3.1.1.0.0.1.1">
 							</span></span></div></div>
 							
